force-app/main/default/objects/SPIFF__c/SPIFF__c.object-meta.xml
<CustomObject>
    <label>Spiff</label>
    <nameField>
        <label>SPIFF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPIFFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>