force-app/main/default/objects/SPIFF__c/fields/Distrubution__c.field-meta.xml
<CustomField>
    <fullName>Distrubution__c</fullName>
    <label>Distribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>