force-app/main/default/objects/SPIFF__c/fields/Max_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Max_Reseller__c</fullName>
    <formula>MAX(AV__c,CDW__c, NSP__c,SPG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Reseller</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>