force-app/main/default/objects/SPIFF__c/fields/NSP__c.field-meta.xml
<CustomField>
    <fullName>NSP__c</fullName>
    <label>NSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>