force-app/main/default/objects/SPIFF__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <label>PriceBook</label>
    <length>200</length>
    <type>Text</type>
</CustomField>